--- a/client/src/ui/dialogs/login_dialog.ui
+++ b/client/src/ui/dialogs/login_dialog.ui
@@ -10,9 +10,6 @@
     <height>538</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string comment="Window Title">Connect to Enterprise Controller</string>
-  </property>
   <property name="modal">
    <bool>false</bool>
   </property>
@@ -20,16 +17,7 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
+   <property name="margin">
     <number>0</number>
    </property>
    <item>
@@ -163,16 +151,7 @@
           <item row="2" column="1">
            <widget class="QWidget" name="widget" native="true">
             <layout class="QHBoxLayout" name="horizontalLayout">
-             <property name="leftMargin">
-              <number>0</number>
-             </property>
-             <property name="topMargin">
-              <number>0</number>
-             </property>
-             <property name="rightMargin">
-              <number>0</number>
-             </property>
-             <property name="bottomMargin">
+             <property name="margin">
               <number>0</number>
              </property>
              <item>
@@ -274,16 +253,7 @@
      <item>
       <widget class="QWidget" name="hostWidget" native="true">
        <layout class="QHBoxLayout" name="horizontalLayout_7">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
+        <property name="margin">
          <number>0</number>
         </property>
        </layout>
