--- a/wixsetup/maven/filter-resources/Product-full.wxs
+++ b/wixsetup/maven/filter-resources/Product-full.wxs
@@ -808,6 +808,24 @@
             <Component>
                 <File Id="ServerQt5Sql$(var.suffix).dll" Name="Qt5Sql$(var.suffix).dll" Source="$(var.SourceDir)\Qt5Sql$(var.suffix).dll" />
             </Component>
+            <Component>
+                <File Id="Servericudt53.dll" Name="icudt53.dll" Source="$(var.SourceDir)\icudt53.dll"  />                
+            </Component>                 
+            <Component>
+                <File Id="Servericuin53.dll" Name="icuin53.dll" Source="$(var.SourceDir)\icuin53.dll"  />                
+            </Component>                 
+            <Component>
+                <File Id="Servericuuc5.dll" Name="icuuc53.dll" Source="$(var.SourceDir)\icuuc53.dll"  />                
+            </Component>                 
+            <Component>
+                <File Id="ServerlibGLESv2$(var.suffix).dll" Name="libGLESv2$(var.suffix).dll" Source="$(var.SourceDir)\libGLESv2$(var.suffix).dll"  />                
+            </Component>                         
+                <Component>
+                <File Id="Serverquazip.dll" Name="quazip.dll" Source="$(var.SourceDir)\quazip.dll"  />                
+            </Component>
+            <Component>
+                <File Id="Serverzlibwapi.dll" Name="zlibwapi.dll" Source="$(var.SourceDir)\zlibwapi.dll"  />                
+            </Component>             
         </ComponentGroup>
 
         <ComponentGroup Id="ServerImageFormats" Directory="ServerImageFormats">
