--- a/client/src/ui/dialogs/login_dialog.ui
+++ b/client/src/ui/dialogs/login_dialog.ui
@@ -17,7 +17,16 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -50,7 +59,7 @@
         </sizepolicy>
        </property>
        <property name="title">
-        <string comment="Groupbox Title">Connect to Enterprise Controller</string>
+        <string comment="Groupbox Title">Connect to Server</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,0,0,0">
         <item>
@@ -151,7 +160,16 @@
           <item row="2" column="1">
            <widget class="QWidget" name="widget" native="true">
             <layout class="QHBoxLayout" name="horizontalLayout">
-             <property name="margin">
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
               <number>0</number>
              </property>
              <item>
@@ -253,7 +271,16 @@
      <item>
       <widget class="QWidget" name="hostWidget" native="true">
        <layout class="QHBoxLayout" name="horizontalLayout_7">
-        <property name="margin">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
          <number>0</number>
         </property>
        </layout>
