--- a/client/src/ui/widgets/properties/expert_settings_widget.ui
+++ b/client/src/ui/widgets/properties/expert_settings_widget.ui
@@ -24,7 +24,16 @@
    <item>
     <widget class="QWidget" name="assureWidget" native="true">
      <layout class="QVBoxLayout" name="verticalLayout">
-      <property name="margin">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
        <number>0</number>
       </property>
       <item>
@@ -43,7 +52,16 @@
          <item>
           <widget class="QWidget" name="horizontalWidget" native="true">
            <layout class="QHBoxLayout" name="horizontalLayout_3">
-            <property name="margin">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
              <number>0</number>
             </property>
             <item>
@@ -186,7 +204,16 @@
          <item>
           <widget class="QWidget" name="widget" native="true">
            <layout class="QHBoxLayout" name="horizontalLayout_5">
-            <property name="margin">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
              <number>0</number>
             </property>
             <item>
@@ -199,7 +226,7 @@
             <item>
              <widget class="QLabel" name="highQualityWarningLabel">
               <property name="text">
-               <string>Warning! High quality may result in Media Server’s CPU overload, network connection errors and other issues.</string>
+               <string>Warning! High quality may result in Server’s CPU overload, network connection errors and other issues.</string>
               </property>
              </widget>
             </item>
